fix (Projects Header now responsively realigns)

--- a/client/src/features/projects/ProjectsStylesheet.scss
+++ b/client/src/features/projects/ProjectsStylesheet.scss
@@ -43,7 +43,15 @@
 .projectsHeaderContainer {
   font-size: 3em;
   color: $font-light;
-  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.projectsHeader {
+  width: 100%;
+  margin-right: 16.4%;
 }
 
 .contentRow {
